Make sure menu doesn't jump around when a project is in fullscreen view

--- a/css/custom.css
+++ b/css/custom.css
@@ -7,6 +7,9 @@ body.noscroll {
 	overflow-y: hidden;
 	overflow-x: hidden;
 }
+body.noscroll .contain-to-grid .top-bar {
+	padding-right: 7px;
+}
 
 .orbit-bullets {
 	display: none;
